--- a/src/Helios.conf
+++ b/src/Helios.conf
@@ -1,7 +1,7 @@
 -U"/C/PROGRA~1/CROSSK~1/libc"
--O"/C/Prometheus/Helios/obj:/C/Prometheus/Helios/src/"
--I"/C/PROGRA~1/CROSSK~1/kylix/lib:/C/PROGRA~1/INDY9F~1/LibD7:/C/Prometheus/Helios/src/"
--U"/C/PROGRA~1/CROSSK~1/kylix/lib:/C/PROGRA~1/INDY9F~1/Source:/C/Prometheus/Helios/src/"
+-O"/C/Prometheus/Helios/obj:/C/Prometheus/Helios/trunk/src/"
+-I"/C/PROGRA~1/CROSSK~1/kylix/lib:/C/PROGRA~1/INDY9F~1/LibD7:/C/Prometheus/Helios/trunk/src/"
+-U"/C/PROGRA~1/CROSSK~1/kylix/lib:/C/PROGRA~1/INDY9F~1/Source:/C/Prometheus/Helios/trunk/src/"
 -$A8
 -$B-
 -$C+
@@ -39,4 +39,4 @@
 -LE"/c/program files/borland/delphi7/Projects/Bpl"
 -LN"/c/program files/borland/delphi7/Projects/Bpl"
 -ALibc=ckLibc
--E"/C/Prometheus/Helios/bin"
+-E"/C/Prometheus/Helios"
