--- a/src/Helios.cfg
+++ b/src/Helios.cfg
@@ -24,6 +24,7 @@
 -$X+
 -$YD
 -$Z1
+-GD
 -cg
 -AWinTypes=Windows;WinProcs=Windows;DbiTypes=BDE;DbiProcs=BDE;DbiErrs=BDE;
 -H+
@@ -35,6 +36,7 @@
 -N"../obj"
 -LE"c:\program files\borland\delphi7\Projects\Bpl"
 -LN"c:\program files\borland\delphi7\Projects\Bpl"
+-DmadExcept
 -w-UNSAFE_TYPE
 -w-UNSAFE_CODE
 -w-UNSAFE_CAST
