--- a/src/Helios.conf
+++ b/src/Helios.conf
@@ -1,7 +1,7 @@
--U"/C/PROGRA~1/CROSSK~1/libc"
--O"/C/Prometheus/Helios/obj:/C/Prometheus/Helios/trunk/src/"
--I"/C/PROGRA~1/CROSSK~1/kylix/lib:/C/PROGRA~1/INDY9F~1/LibD7:/C/Prometheus/Helios/trunk/src/"
--U"/C/PROGRA~1/CROSSK~1/kylix/lib:/C/PROGRA~1/INDY9F~1/Source:/C/Prometheus/Helios/trunk/src/"
+-U"/F/PROGRA~1/CROSSK~1/libc"
+-O"/F/PROGRA~1/CROSSK~1/kylix/lib:/F/XPTsusai/Desktop/DELPHI~1/Helios/src/"
+-I"/F/PROGRA~1/CROSSK~1/kylix/lib:/F/XPTsusai/Desktop/DELPHI~1/Helios/src/"
+-U"/F/PROGRA~1/CROSSK~1/kylix/lib:/F/XPTsusai/Desktop/DELPHI~1/Helios/src/"
 -$A8
 -$B-
 -$C+
@@ -36,8 +36,8 @@
 -M
 -$M16384,1048576
 -K$00400000
+-E"../bin"
 -N"../obj"
--LE"/c/program files/borland/delphi7/Projects/Bpl"
--LN"/c/program files/borland/delphi7/Projects/Bpl"
+-LE"/f/program files/borland/delphi7/Projects/Bpl"
+-LN"/f/program files/borland/delphi7/Projects/Bpl"
 -ALibc=ckLibc
--E"/C/Prometheus/Helios"
