--- a/src/Helios.conf
+++ b/src/Helios.conf
@@ -38,6 +38,6 @@
 -K$00400000
 -E"../bin"
 -N"../obj"
--LE"/c/program files/borland/delphi7/Projects/Bpl"
--LN"/c/program files/borland/delphi7/Projects/Bpl"
+-LE"/f/program files/borland/delphi7/Projects/Bpl"
+-LN"/f/program files/borland/delphi7/Projects/Bpl"
 -ALibc=ckLibc
