--- a/src/Helios.cfg
+++ b/src/Helios.cfg
@@ -34,8 +34,9 @@
 -K$00400000
 -E"../bin"
 -N"../obj"
--LE"f:\program files\borland\delphi7\Projects\Bpl"
--LN"f:\program files\borland\delphi7\Projects\Bpl"
+-LE"c:\program files\borland\delphi7\Projects\Bpl"
+-LN"c:\program files\borland\delphi7\Projects\Bpl"
+-DmadExcept
 -w-UNSAFE_TYPE
 -w-UNSAFE_CODE
 -w-UNSAFE_CAST
