- Rev 19- [2006/09/17] - Tsusai - Overview : Fixed terminations, and added TCPServer activations and  disconnections learned from Prometheus. [2006/09/17] - Tsusai - WinLinux : Added Termination signal capturing, and also adding  manual process termination. [2006/09/17] - Tsusai - Globals : SQL timeout set to 10 seconds, Termination procedures  added here.  Now houses the server version. [2006/09/17] - Tsusai - TCPServerRoutines : Added, helps with activation and deactivation. [2006/09/17] - Tsusai - Console : Minor tweaks to MainProc class. -

--- a/src/Helios.conf
+++ b/src/Helios.conf
@@ -1,7 +1,7 @@
--U"/F/PROGRA~1/CROSSK~1/libc"
--O"/F/PROGRA~1/CROSSK~1/kylix/lib:/F/XPTsusai/Desktop/DELPHI~1/Helios/src/"
--I"/F/PROGRA~1/CROSSK~1/kylix/lib:/F/XPTsusai/Desktop/DELPHI~1/Helios/src/"
--U"/F/PROGRA~1/CROSSK~1/kylix/lib:/F/XPTsusai/Desktop/DELPHI~1/Helios/src/"
+-U"/C/PROGRA~1/CROSSK~1/libc"
+-O"/C/PROGRA~1/CROSSK~1/kylix/lib:/E/Helios/src/"
+-I"/C/PROGRA~1/CROSSK~1/kylix/lib:/E/Helios/src/"
+-U"/C/PROGRA~1/CROSSK~1/kylix/lib:/E/Helios/src/"
 -$A8
 -$B-
 -$C+
@@ -38,6 +38,7 @@
 -K$00400000
 -E"../bin"
 -N"../obj"
--LE"/f/program files/borland/delphi7/Projects/Bpl"
--LN"/f/program files/borland/delphi7/Projects/Bpl"
+-LE"/c/program files/borland/delphi7/Projects/Bpl"
+-LN"/c/program files/borland/delphi7/Projects/Bpl"
+-DmadExcept
 -ALibc=ckLibc
