--- a/src/Helios.cfg
+++ b/src/Helios.cfg
@@ -34,8 +34,8 @@
 -K$00400000
 -E"../bin"
 -N0"../obj"
--LE"C:\Documents and Settings\dditthardt\My Documents\Borland Studio Projects\Bpl"
--LN"C:\Documents and Settings\dditthardt\My Documents\Borland Studio Projects\Bpl"
+-LE"C:\Documents and Settings\RaX\My Documents\Borland Studio Projects\Bpl"
+-LN"C:\Documents and Settings\RaX\My Documents\Borland Studio Projects\Bpl"
 -DmadExcept
 -w-UNSAFE_TYPE
 -w-UNSAFE_CODE
