- Rev 37- [2006/10/13] - Tsusai - Friday October 13th....Just as creepy as 06/06/06 [2006/10/13] - Tsusai - LoginProcesses: Separated the validation code from ParseLogin, and  added MD5 client connection support. -

--- a/src/Helios.conf
+++ b/src/Helios.conf
@@ -1,7 +1,7 @@
 -U"/C/PROGRA~1/CROSSK~1/libc"
--O"/C/PROGRA~1/CROSSK~1/kylix/lib:/E/Helios/src/"
--I"/C/PROGRA~1/CROSSK~1/kylix/lib:/E/Helios/src/"
--U"/C/PROGRA~1/CROSSK~1/kylix/lib:/E/Helios/src/"
+-O"/C/PROGRA~1/CROSSK~1/kylix/lib:/C/DOCUME~1/Tsusai/Desktop/Delphi/Helios/src/"
+-I"/C/PROGRA~1/CROSSK~1/kylix/lib:/C/DOCUME~1/Tsusai/Desktop/Delphi/Helios/src/"
+-U"/C/PROGRA~1/CROSSK~1/kylix/lib:/C/DOCUME~1/Tsusai/Desktop/Delphi/Helios/src/"
 -$A8
 -$B-
 -$C+
