--- a/src/Helios.conf
+++ b/src/Helios.conf
@@ -1,7 +1,7 @@
 -U"/C/PROGRA~1/CROSSK~1/libc"
--O"/C/PROGRA~1/CROSSK~1/kylix/lib:/C/DOCUME~1/Tsusai/Desktop/Delphi/Helios/src/"
--I"/C/PROGRA~1/CROSSK~1/kylix/lib:/C/DOCUME~1/Tsusai/Desktop/Delphi/Helios/src/"
--U"/C/PROGRA~1/CROSSK~1/kylix/lib:/C/PROGRA~1/Indy10CK/System:/C/PROGRA~1/Indy10CK/Core:/C/PROGRA~1/Indy10CK/PROTOC~1:/C/DOCUME~1/Tsusai/Desktop/Delphi/Helios/src/"
+-O"/C/PROGRA~1/CROSSK~1/kylix/lib:/C/DOCUME~1/ADMINI~1/Desktop/Helios/src/"
+-I"/C/PROGRA~1/CROSSK~1/kylix/lib:/C/DOCUME~1/ADMINI~1/Desktop/Helios/src/"
+-U"/C/PROGRA~1/CROSSK~1/kylix/lib:/c/Indy10/Core:/c/Indy10/Protocols:/c/Indy10/System:/C/DOCUME~1/ADMINI~1/Desktop/Helios/src/"
 -$A8
 -$B-
 -$C+
