--- a/src/Helios.conf
+++ b/src/Helios.conf
@@ -37,8 +37,8 @@
 -$M16384,1048576
 -K$00400000
 -E"../bin"
--N"../obj"
--LE"/c/program files/borland/delphi7/Projects/Bpl"
--LN"/c/program files/borland/delphi7/Projects/Bpl"
+-N0"../obj"
+-LE"/C/Documents and Settings/Administrator/My Documents/Borland Studio Projects/Bpl"
+-LN"/C/Documents and Settings/Administrator/My Documents/Borland Studio Projects/Bpl"
 -DmadExcept
 -ALibc=ckLibc
