- Rev 65- [2006/12/18] - Tsusai - Notes/Overview: Linux compiler fixes. [2006/12/18] - Tsusai - JanSQLDatabase : Renamed JanSQL in the uses to janSQL.  Unit name  must match file name.  Its a casesensitive OS. [2006/12/18] - Tsusai - janSQLExpressions2 : Recleaned, leaving 1 hint for now.  For some  odd reason the crosskylix compiler wasn't liking it the way I had it. -

--- a/src/Helios.conf
+++ b/src/Helios.conf
@@ -1,7 +1,7 @@
 -U"/C/PROGRA~1/CROSSK~1/libc"
 -O"/C/PROGRA~1/CROSSK~1/kylix/lib:/C/DOCUME~1/ADMINI~1/Desktop/Helios/src/"
 -I"/C/PROGRA~1/CROSSK~1/kylix/lib:/C/DOCUME~1/ADMINI~1/Desktop/Helios/src/"
--U"/C/PROGRA~1/CROSSK~1/kylix/lib:/c/Indy10/Core:/c/Indy10/Protocols:/c/Indy10/System:/C/DOCUME~1/ADMINI~1/Desktop/Helios/src/"
+-U"/C/PROGRA~1/CROSSK~1/kylix/lib:/C/Indy10/Core:/C/Indy10/Protocols:/C/Indy10/System:/C/DOCUME~1/ADMINI~1/Desktop/Helios/src/"
 -$A8
 -$B-
 -$C+
@@ -37,8 +37,8 @@
 -$M16384,1048576
 -K$00400000
 -E"../bin"
--N"../obj"
--LE"/c/program files/borland/delphi7/Projects/Bpl"
--LN"/c/program files/borland/delphi7/Projects/Bpl"
+-N0"../obj"
+-LE"/C/Documents and Settings/Administrator/My Documents/Borland Studio Projects/Bpl"
+-LN"/C/Documents and Settings/Administrator/My Documents/Borland Studio Projects/Bpl"
 -DmadExcept
 -ALibc=ckLibc
