--- a/src/Helios.conf
+++ b/src/Helios.conf
@@ -1,7 +1,7 @@
 -U"/C/PROGRA~1/CROSSK~1/libc"
--O"/C/PROGRA~1/CROSSK~1/kylix/lib:/C/DOCUME~1/ADMINI~1/Desktop/Helios/src/"
--I"/C/PROGRA~1/CROSSK~1/kylix/lib:/C/DOCUME~1/ADMINI~1/Desktop/Helios/src/"
--U"/C/PROGRA~1/CROSSK~1/kylix/lib:/C/Indy10/Core:/C/Indy10/Protocols:/C/Indy10/System:/C/DOCUME~1/ADMINI~1/Desktop/Helios/src/"
+-O"/C/PROGRA~1/CROSSK~1/kylix/lib:/C/Helios/trunk/src/"
+-I"/C/PROGRA~1/CROSSK~1/kylix/lib:/C/Helios/trunk/src/"
+-U"/C/PROGRA~1/CROSSK~1/kylix/lib:/C/Helios/trunk/src/"
 -$A8
 -$B-
 -$C+
