--- a/src/Helios.cfg
+++ b/src/Helios.cfg
@@ -33,7 +33,9 @@
 -$M16384,1048576
 -K$00400000
 -E"../bin"
--N"../obj"
+-N0"../obj"
+-LE"C:\Documents and Settings\Administrator\My Documents\Borland Studio Projects\Bpl"
+-LN"C:\Documents and Settings\Administrator\My Documents\Borland Studio Projects\Bpl"
 -DmadExcept
 -w-UNSAFE_TYPE
 -w-UNSAFE_CODE
