- Rev 241 - [2007/04/28] CR - Overview: Commenting, reuse of constants to self-explain an  array's bounds. [2007/04/28] CR - GameConstants: Altered header.  Rearranged Direction constants  to reuse NORTH and NORTHEAST as the bounds for the constant Directions array. -

--- a/src/Helios.cfg
+++ b/src/Helios.cfg
@@ -34,8 +34,8 @@
 -K$00400000
 -E"../bin"
 -N"../obj"
--LE"c:\program files\borland\delphi7\Projects\Bpl"
--LN"c:\program files\borland\delphi7\Projects\Bpl"
+-LE"f:\delphi\Projects\Bpl"
+-LN"f:\delphi\Projects\Bpl"
 -DmadExcept
 -w-UNSAFE_TYPE
 -w-UNSAFE_CODE
