--- a/src/Helios.conf
+++ b/src/Helios.conf
@@ -1,7 +1,7 @@
 -U"/C/PROGRA~1/CROSSK~1/libc"
--O"/C/PROGRA~1/CROSSK~1/kylix/lib:/C/DOCUME~1/ADMINI~1/Desktop/Helios/trunk/src/"
--I"/C/PROGRA~1/CROSSK~1/kylix/lib:/C/DOCUME~1/ADMINI~1/Desktop/Helios/trunk/src/"
--U"/C/PROGRA~1/CROSSK~1/kylix/lib:/c/indy10/Core:/c/indy10/Protocols:/c/indy10/System:/C/DOCUME~1/ADMINI~1/Desktop/Helios/trunk/src/"
+-O"/C/PROGRA~1/CROSSK~1/kylix/lib:/C/DOCUME~1/Tsusai/Desktop/Delphi/Helios/src/"
+-I"/C/PROGRA~1/CROSSK~1/kylix/lib:/C/DOCUME~1/Tsusai/Desktop/Delphi/Helios/src/"
+-U"/C/PROGRA~1/CROSSK~1/kylix/lib:/C/PROGRA~1/CROSSK~1/Indy10/Core:/C/PROGRA~1/CROSSK~1/Indy10/PROTOC~1:/C/PROGRA~1/CROSSK~1/Indy10/System:/C/DOCUME~1/Tsusai/Desktop/Delphi/Helios/src/"
 -$A8
 -$B-
 -$C+
@@ -37,8 +37,8 @@
 -$M16384,1048576
 -K$00400000
 -E"../bin"
--N"../obj"
--LE"/c/program files/borland/delphi7/Projects/Bpl"
--LN"/c/program files/borland/delphi7/Projects/Bpl"
+-N0"../obj"
+-LE"/C/Documents and Settings/Administrator/My Documents/Borland Studio Projects/Bpl"
+-LN"/C/Documents and Settings/Administrator/My Documents/Borland Studio Projects/Bpl"
 -DmadExcept
 -ALibc=ckLibc
