- Rev 690 - [2009/09/13] Aeomin - First revision after Helios's death. [2009/09/13] Aeomin - Support RagRE client (Regular Sakray client no longer works). -

--- a/src/Helios.cfg
+++ b/src/Helios.cfg
@@ -34,9 +34,6 @@
 -K$00400000
 -E"../bin"
 -N0"../obj"
--LE"C:\Documents and Settings\Administrator\My Documents\Borland Studio Projects\Bpl"
--LN"C:\Documents and Settings\Administrator\My Documents\Borland Studio Projects\Bpl"
+-LE"E:\Documents and Settings\All Users\Documents\RAD Studio\5.0\Bpl"
+-LN"E:\Documents and Settings\All Users\Documents\RAD Studio\5.0\Dcp"
 -DmadExcept
--w-UNSAFE_TYPE
--w-UNSAFE_CODE
--w-UNSAFE_CAST
